Проверено создание и редактирование тестов с валидацией ошибок не обнаружено.